examples/test/testpolicy11163.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11163
  namespace: namespace481
spec:
  podSelector:
    matchLabels:
      key22: value1
      key39: value46
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key34: value17
      podSelector:
        matchLabels:
          key21: value15
          key45: value4
          key25: value26
